tests/paczka1/fuzzy1/54588760.err
Error in line 2: GvjATGgd S594 24,3
Error in line 14: A596 S594 9,5
Error in line 24: QFKRGPGA S598 9,3
Error in line 35: A596 S34 75,1
